data/derived/sp14/progs/unify/prog1863.ml.out
Characters 52-53:
  List.fold_left ( fun a x -> x a , fun x -> x, []  ) 3;;
                                                      ^
Error: This expression has type int but an expression was expected of type
         'a * ('b -> 'b * 'c list)
